Fix macos packaging